<resources>
    <string name="app_name">Evaluation_Formative_03_2713413</string>
    <string name="Annuler">Annuler</string>
    <string name="Accepter">Accepter</string>
    <string name="Effacer">Effacer</string>
    <string name="Courriel">Courriel</string>
    <string name="Telephone">Telephone</string>
    <string name="Adresse">Adresse</string>
    <string name="Name">Name</string>
    <string name="ImgRobot">TODO</string>
    <string name="canceled">Canceled</string>
    <string name="submited">Submited</string>
</resources>