<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:duplicateParentState="false"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/ImgRobot"
        android:minWidth="@android:dimen/thumbnail_width"
        android:minHeight="@android:dimen/thumbnail_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/android"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <EditText
        android:id="@+id/TextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/TextAdress"
        app:layout_constraintEnd_toEndOf="@+id/TextAdress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TextAdress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/TextPhon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/Telephone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/TextMail"
        app:layout_constraintEnd_toEndOf="@+id/TextMail"
        app:layout_constraintStart_toStartOf="@+id/TextMail"
        app:layout_constraintTop_toBottomOf="@+id/TextAdress" />

    <EditText
        android:id="@+id/TextAdress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/Adresse"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/TextPhon"
        app:layout_constraintEnd_toEndOf="@+id/TextPhon"
        app:layout_constraintStart_toStartOf="@+id/TextPhon"
        app:layout_constraintTop_toBottomOf="@+id/TextName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/TextMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:hint="@string/Courriel"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Accepter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPhon"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="FunCancel"
        android:text="@string/Annuler"
        app:layout_constraintBottom_toBottomOf="@+id/Accepter"
        app:layout_constraintEnd_toEndOf="@+id/TextMail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Accepter"
        app:layout_constraintWidth_max="wrap"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Effacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="FunErase"
        android:text="@string/Effacer"
        app:layout_constraintBottom_toBottomOf="@+id/Accepter"
        app:layout_constraintEnd_toStartOf="@+id/Accepter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/TextMail"
        app:layout_constraintWidth_max="wrap"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Accepter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="FunSubmit"
        android:text="@string/Accepter"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/Annuler"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Effacer"
        app:layout_constraintTop_toBottomOf="@+id/TextMail"
        app:layout_constraintWidth_max="wrap"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>